jump done+bugsv1

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             </div>
         <div id = 'game-screen'>
         </div>
+        <div id = 'ground-image'>
+        </div>
     </div>
 
 
@@ -39,6 +41,7 @@
 
     <!--Scripts-->
     <script type="text/javascript" src="js/obstacle.js"></script>
+    <script type="text/javascript" src="js/coffee.js"></script>
     <script type="text/javascript" src="js/player.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
