--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div id="game-container">
             <div id="stats">
               <h2>Stats</h2>
-              <p>Score: <span id="score">0</span></p>
-              <p>Lives: <span id="lives">3</span></p>
+              <p> <img src="./images/points-nobg.png" alt="points"> <span id="score">0</span></p>
+              <p> <img src="./images/heart-nobg.png" alt="lives"> <span id="lives">3</span></p>
             </div>
         <div id = 'game-screen'>
         </div>
