end screen fixed

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
 
         <!-- Game Screen (initially hidden) -->
+        <div id = 'game+end'> 
         <div id="game-container">
             <div id="stats">
               <h2>Stats</h2>
@@ -26,25 +27,26 @@
             </div>
         <div id = 'game-screen'>
         </div>
-        <div id = 'ground-image'>
-        </div>
-    </div>
-
-
-        <!-- Enmd Screen -->
         <div id='game-end'>
             <img src="./images/angrywebdev.png" alt="end-image">
             <h1>Get a ticket!</h1>
             <br />
             <button id ='restart-button'>Restart</button>
         </div>
-
         <div id='game-end-job'>
             <img src="./images/happywebdev.png" alt="end-image2">
             <h1>You found a job!</h1>
             <br />
             <button id ='restart-button-job-offer'>Restart</button>
         </div>
+        <div id = 'ground-image'>
+        </div>
+    </div>
+
+
+        <!-- Enmd Screen -->
+
+    </div>
     </main>
 
     <!--Scripts-->
