--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
 </head>
 <body>
     <main>
-        <!-- Start Screen-->
+    <!-- Start Screen-->
         <div id= 'game-intro'>
-<!--             <img id = "intro-image" src="./images/intro screen.png" alt="game-image">
- -->     <h1>Defeat the Code!</h1>
-            <p id="intro text">Use the arrow keys to tame the WebDev student. <br/> Avoid bugs and catch coffee to stay alive and earn points.
-                The more points you earn, the higher your reward! </p>
+            <h1>Defeat the Code!</h1>
+            <p id="intro text">Use the arrow keys to tame the WebDev student.
+            <br/> Avoid bugs and catch coffee to stay alive and earn points.
+            The more points you earn, the higher your reward! </p>
             <button id= "start-button">Start Coding</button>
         </div>
 
-        <!-- Game Screen (initially hidden) -->
-        <div id = 'game+end'> 
+    <!-- Game Screen (initially hidden) -->
         <div id="game-container">
             <div id="stats">
               <h2>Stats</h2>
@@ -27,6 +26,9 @@
             </div>
         <div id = 'game-screen'>
         </div>
+
+
+    <!-- End Screen -->
         <div id='game-end'>
             <img src="./images/angrywebdev.png" alt="end-image">
             <h1>Get a ticket!</h1>
@@ -39,13 +41,6 @@
             <br />
             <button id ='restart-button-job-offer'>Restart</button>
         </div>
-        <div id = 'ground-image'>
-        </div>
-    </div>
-
-
-        <!-- Enmd Screen -->
-
     </div>
     </main>
 
