--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <main>
     <!-- Start Screen-->
         <div id= 'game-intro'>
-            <h1>Defeat the Code!</h1>
+            <h1>WebDev Survivor</h1>
             <p id="intro text">Use the arrow keys to tame the WebDev student.
-            <br/> Avoid bugs and catch coffee to stay alive and earn points.
-            The more points you earn, the higher your reward! </p>
+            <br/> Avoid bugs and catch coffee to stay alive and earn points, to increase your chances of getting 
+            a job you love! 
+            <br/> But be careful, the more coffee you drink, the faster the game will be!
+        </p>
             <button id= "start-button">Start Coding</button>
         </div>
 
