--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div id="game-container">
             <div id="stats">
               <h2>Stats</h2>
-              <p> <img src="./images/points-nobg.png" alt="points"> <span id="score">0</span></p>
-              <p> <img src="./images/heart-nobg.png" alt="lives"> <span id="lives">3</span></p>
+              <p> <img src="./docs/images/points-nobg.png" alt="points"> <span id="score">0</span></p>
+              <p> <img src="./docs/images/heart-nobg.png" alt="lives"> <span id="lives">3</span></p>
             </div>
         <div id = 'game-screen'>
         </div>
@@ -32,13 +32,13 @@
 
     <!-- End Screen -->
         <div id='game-end'>
-            <img src="./images/angrywebdev.png" alt="end-image">
+            <img src="./docs/images/angrywebdev.png" alt="end-image">
             <h1>Get a ticket!</h1>
             <br />
             <button id ='restart-button'>Restart</button>
         </div>
         <div id='game-end-job'>
-            <img src="./images/happywebdev.png" alt="end-image2">
+            <img src="./docs/images/happywebdev.png" alt="end-image2">
             <h1>You found a job!</h1>
             <br />
             <button id ='restart-button-job-offer'>Restart</button>
