--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebDev Survivor</title>
-    <link rel="stylesheet" href="./Styles/style.css"/> 
+    <link rel="stylesheet" href="../ironhack-module-1-project/docs/Styles/style.css"/> 
 </head>
 <body>
     <main>
@@ -47,11 +47,11 @@
     </main>
 
     <!--Scripts-->
-    <script type="text/javascript" src="js/obstacle.js"></script>
-    <script type="text/javascript" src="js/coffee.js"></script>
-    <script type="text/javascript" src="js/player.js"></script>
-    <script type="text/javascript" src="js/game.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="./docs/js/obstacle.js"></script>
+    <script type="text/javascript" src="./docs/js/coffee.js"></script>
+    <script type="text/javascript" src="./docs/js/player.js"></script>
+    <script type="text/javascript" src="./docs/js/game.js"></script>
+    <script type="text/javascript" src="./docs/js/script.js"></script>
 
 </body>
 </html>
